--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 preparsing, allowing ::=
 move logic from grammar.match -> _match to an if in grammar, so we dont have a bunch of extra function calls
+accept a grammar string in stringParse, then compile it there
